--- a/pneumonia_webapp/templates/index.html
+++ b/pneumonia_webapp/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Pneumonia Classifier</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body class="container mt-5">
     <h2 class="mb-4">Upload Chest X-ray Image</h2>
