--- a/pneumonia_webapp/templates/index.html
+++ b/pneumonia_webapp/templates/index.html
@@ -5,6 +5,7 @@
     <title>AI-Powered Pneumonia Detection</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </head>
 <body>
     <div class="container py-5">
